--- a/MyApplication/app/src/main/res/layout/activity_fmcarga.xml
+++ b/MyApplication/app/src/main/res/layout/activity_fmcarga.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".FMCarga">
 
     <ScrollView
@@ -28,6 +29,7 @@
                     android:id="@+id/imgBtn_volver"
                     android:layout_width="8dp"
                     android:layout_height="match_parent"
+                    android:background="@null"
                     android:layout_weight="1"
                     android:contentDescription="Volver"
                     app:srcCompat="@drawable/volver" />
@@ -40,7 +42,8 @@
                     android:gravity="center"
                     android:scaleX="1.8"
                     android:scaleY="1.8"
-                    android:text="F. M. en una carga" />
+                    android:text="F. M. en una carga"
+                    android:textColor="#000000" />
 
                 <ImageView
                     android:id="@+id/imageView6"
@@ -64,7 +67,10 @@
                 android:paddingHorizontal="200px"
                 android:scaleX="1.4"
                 android:scaleY="1.4"
-                android:text="Formulas:" />
+                android:text="Formulas:"
+                android:textColor="#000000"
+                android:textColorHint="#000000"
+                android:textColorLink="#000000" />
 
             <ImageView
                 android:id="@+id/imageView8"
@@ -89,7 +95,10 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="θ:" />
+                    android:text="θ:"
+                    android:textColor="#000000"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000" />
 
                 <EditText
                     android:id="@+id/txt_angulo"
@@ -97,7 +106,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000"
+                    android:textColor="#000000" />
 
                 <TextView
                     android:id="@+id/textView24"
@@ -107,7 +119,10 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="V:" />
+                    android:text="V:"
+                    android:textColor="#000000"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000" />
 
                 <EditText
                     android:id="@+id/txt_velocidad"
@@ -115,7 +130,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#000000"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000" />
             </LinearLayout>
 
             <Space
@@ -135,7 +153,10 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="q:" />
+                    android:text="q:"
+                    android:textColor="#000000"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000" />
 
                 <EditText
                     android:id="@+id/txt_carga"
@@ -143,7 +164,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#000000"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000" />
 
                 <TextView
                     android:id="@+id/textView27"
@@ -153,7 +177,10 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="B:" />
+                    android:text="B:"
+                    android:textColor="#000000"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000" />
 
                 <EditText
                     android:id="@+id/txt_campo"
@@ -161,7 +188,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#000000"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#000000" />
 
             </LinearLayout>
 
@@ -173,6 +203,8 @@
                 android:id="@+id/btn_calcular"
                 android:layout_width="match_parent"
                 android:layout_height="64dp"
+                android:background="@null"
+                android:backgroundTint="#009688"
                 android:text="Calcular" />
 
             <Space
@@ -187,7 +219,10 @@
                 android:gravity="center"
                 android:scaleX="2"
                 android:scaleY="2"
-                android:text="Respuesta" />
+                android:text="Respuesta"
+                android:textColor="#000000"
+                android:textColorHint="#000000"
+                android:textColorLink="#000000" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -200,6 +235,7 @@
                     android:layout_height="59dp"
                     android:text="0.0"
                     android:textAlignment="center"
+                    android:textColor="#000000"
                     android:textSize="20sp" />
 
             </LinearLayout>
