--- a/MyApplication/app/src/main/res/layout/activity_fmcorriente.xml
+++ b/MyApplication/app/src/main/res/layout/activity_fmcorriente.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".FMCorriente">
 
     <ScrollView
@@ -30,6 +31,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:contentDescription="Volver"
+                    android:background="@null"
                     app:srcCompat="@drawable/volver" />
 
                 <TextView
@@ -40,7 +42,9 @@
                     android:gravity="center"
                     android:scaleX="1.8"
                     android:scaleY="1.8"
-                    android:text="F. M. en corriente" />
+                    android:text="F. M. en corriente"
+                    android:background="@null"
+                    android:textColor="#000000" />
 
                 <ImageView
                     android:id="@+id/imageView20"
@@ -64,7 +68,8 @@
                 android:paddingHorizontal="200px"
                 android:scaleX="1.4"
                 android:scaleY="1.4"
-                android:text="Formulas:" />
+                android:text="Formulas:"
+                android:textColor="#000000" />
 
             <ImageView
                 android:id="@+id/imageView15"
@@ -89,7 +94,8 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="θ:" />
+                    android:text="θ:"
+                    android:textColor="#000000" />
 
                 <EditText
                     android:id="@+id/txt_angulo"
@@ -97,7 +103,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#000000" />
 
                 <TextView
                     android:id="@+id/textView24"
@@ -107,7 +114,8 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="I:" />
+                    android:text="I:"
+                    android:textColor="#000000" />
 
                 <EditText
                     android:id="@+id/txt_corriente"
@@ -115,7 +123,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#000000" />
             </LinearLayout>
 
             <Space
@@ -135,7 +144,8 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="L:" />
+                    android:text="L:"
+                    android:textColor="#000000" />
 
                 <EditText
                     android:id="@+id/txt_longitud"
@@ -143,7 +153,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#000000" />
 
                 <TextView
                     android:id="@+id/textView27"
@@ -153,7 +164,8 @@
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="B:" />
+                    android:text="B:"
+                    android:textColor="#000000" />
 
                 <EditText
                     android:id="@+id/txt_campo"
@@ -161,7 +173,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number|numberDecimal" />
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#000000" />
 
             </LinearLayout>
 
@@ -173,6 +186,8 @@
                 android:id="@+id/btn_calcular"
                 android:layout_width="match_parent"
                 android:layout_height="69dp"
+                android:background="@null"
+                android:backgroundTint="#009688"
                 android:text="Calcular" />
 
             <Space
@@ -187,7 +202,8 @@
                 android:gravity="center"
                 android:scaleX="2"
                 android:scaleY="2"
-                android:text="Respuesta" />
+                android:text="Respuesta"
+                android:textColor="#000000" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -200,6 +216,7 @@
                     android:layout_height="59dp"
                     android:text="0.0"
                     android:textAlignment="center"
+                    android:textColor="#000000"
                     android:textSize="20sp" />
             </LinearLayout>
 
