--- a/MyApplication/app/src/main/res/layout/activity_fmcarga.xml
+++ b/MyApplication/app/src/main/res/layout/activity_fmcarga.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".FMCarga">
+    tools:context="edu.upb.SemicolonDK.FMCarga">
 
     <ScrollView
         android:layout_width="match_parent"
