--- a/MyApplication/app/src/main/res/layout/activity_opciones_magnetismo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_opciones_magnetismo.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:backgroundTintMode="src_atop"
-    tools:context=".OpcionesMagnetismo">
+    tools:context="edu.upb.SemicolonDK.OpcionesMagnetismo">
 
     <ScrollView
         android:layout_width="match_parent"
