--- a/MyApplication/app/src/main/res/layout/activity_helm_holtz.xml
+++ b/MyApplication/app/src/main/res/layout/activity_helm_holtz.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".HelmHoltz">
+    tools:context="edu.example.myapplication.HelmHoltz">
 
     <ScrollView
         android:layout_width="match_parent"
